--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -28,7 +28,7 @@ headlineNumbers:
         value: cumPCRTestsByPublishDate
         tooltip: Cumulative total number of PCR tests processed, reported up to {date}
 
-  - caption: PCR testing capacity (Dev Only)
+  - caption: PCR testing capacity
     valueItems:
 
       - value: plannedPCRCapacityByPublishDate
