Testing - amended tooltip and abstracts for antigen/antibody testing

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -32,7 +32,7 @@ headlineNumbers:
     valueItems:
 
       - value: plannedPCRCapacityByPublishDate
-        tooltip: Estimated PCR testing capacity reported by laboratories on {date}
+        tooltip: Estimated PCR testing capacity reported by laboratories for {date}
 
 ##############################################################################################################################
 
@@ -268,10 +268,10 @@ cards:
     abstract: >
       Number of lab-confirmed positive or negative COVID-19 test results, by test type, by date reported.  This is a 
       count of test results and may include multiple tests for an individual person.  PCR swab tests test for the 
-      presence of COVID-19 and include all pillar 1 and 2 tests and, for England, any PCR swab tests undertaken in 
-      pillar 4.  Antibody serology tests test for COVID-19 antibodies and include pillar 3 tests and, in England, 
-      any antibody serology tests undertaken in pillar 4.  Testing capacity is a projection based on reports from 
-      labs on how many tests they have capacity to carry out each day based on availability of staff and resources.
+      presence of COVID-19 antigens and include all pillar 1 and 2 tests and any PCR swab tests undertaken 
+      in pillar 4.  Antibody serology tests test for COVID-19 antibodies and include pillar 3 tests and any antibody 
+      serology tests undertaken in pillar 4.  Testing capacity is a projection based on reports from labs on how 
+      many tests they have capacity to carry out each day based on availability of staff and resources.
 
     download:
       - plannedPCRCapacityByPublishDate
@@ -434,7 +434,7 @@ cards:
     cardType: chart
     fullWidth: true
     abstract: >
-      Number of lab-confirmed positive or negative COVID-19 test results, by pillar (type of testing),
+      Number of lab-confirmed positive or negative COVID-19 test results, by pillar, 
       by date reported. This is a count of test results and may include multiple tests for an
       individual person. Data for antibody and surveillance testing (pillars 3 and 4) are only
       available for the UK as a whole.
